--- a/brainster-space/public/index.html
+++ b/brainster-space/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Brainster Space</title>
   </head>
   <body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
